[SCRUM 110] - mergowanie, udrożnienei problemów z frontem