@@ -9,6 +9,7 @@ import org.api.pjaidapp.model.Ticket;
 import org.api.pjaidapp.repository.TicketRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,7 +31,7 @@ public class TicketService {
     }
 
     public List<TicketResponse> getAllActiveTickets() {
-        return ticketRepository.findByStatusIn(List.of(Status.NOWE, Status.W_TRAKCIE))
+        return ticketRepository.findByStatusIn(Arrays.asList(Status.NOWE, Status.W_TRAKCIE))
                 .stream()
                 .map(ticketMapper::toResponse)
                 .collect(Collectors.toList());
